# GapControlledSimplex

./: .gitignore  Gap-Controlled-Simplex.slnx  README.md  gsimplex.spec  pyproject.toml  pytest.toml
.github/workflows/: pypi.yml  release.yml
Gap-Controlled-Simplex/: CrissCross.cs  DualSimplex.cs  Gap-Controlled-Simplex.csproj  GapSimplex.cs  PrimalSimplex.cs  Problem.cs  Program.cs  SimplexInterface.cs  Solution.cs  SolverInterface.cs  Vertex.cs
Gap-Controlled-Simplex.Tests/: Gap-Controlled-Simplex.Tests.csproj  LinearProgrammingTest.cs  SimpleTests.cs  SimplexTest.cs
Gap-Controlled-Simplex/Solvers/: CrissCross.cs  DualSimplex.cs  GapSimplex.cs  IterativeSolver.cs  PrimalSimplex.cs  SimplexInterface.cs  SolverInterface.cs
assets/: GapControlledSimplex.drawio
src/gsimplex/: __init__.py  demo.py  main.py  problem.py  solution.py  vertex.py
src/gsimplex/benchmarks/: downloader.py  extractor.py  netlib.py  netlib_emps.py  plato.py
src/gsimplex/solvers/: __init__.py  criss_cross.py  dual_simplex.py  gap_simplex.py  iterative_solver.py  primal_simplex.py  simplex_interface.py  solver_interface.py
src/gsimplex/tools/: extractor.py  parser.py
tests/: test_linear_programming.py  test_netlib.py  test_plato.py  test_simple.py
